# shokunin-challenge-0416

./: LICENSE  README.md  go.sh  magic-square.cabal  stack.yaml
src/: Lib.hs  MagicSquare.hs
test/: MagicSquareSpec.hs
