name:                magic-square
version:             0.1.0.0
synopsis:            Builds simple magic square
description:         Please see README.md
homepage:            https://github.com/akshaymankar/shokunin-challenge-0416#readme
license-file:        LICENSE
author:              Akshay Mankar
copyright:           2016 Akshay Mankar
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable magic-square-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , magic-square
  default-language:    Haskell2010

test-suite magic-square-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , magic-square
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akshaymankar/shokunin-challenge-0416
